# Tiralabraharjoitus

./: .gitignore  .pylintrc  README.md  pyproject.toml  testiteksti.txt  testiteksti3.txt  testiteksti4.txt  testiteksti5.txt  testiteksti6.txt
Dokumentaatio/: Käyttöohje.md  Maarittelydokumentti.md  Testausdokumentti  Testausdokumentti.md  Toteutusdokumentti.md  Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md
src/: huffman.py  huffman_alkio.py  huffman_purku.py  index.py  lzw.py  lzw_purku.py  tiivistys.py
src/test/: huffman_test.py  huffmanpurku_test.py  lzw_test.py  lzwpurku_test.py  testipurkausLZW.txt  testipurku.txt  testitallennus.txt  testiteksti.md  tiivistys_test.py
