[tool.poetry]
name = "tiralabraharjoitus"
version = "0.1.0"
description = ""
authors = ["Kalle Lindholm <kalle.lindholm@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
coverage = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
