[tool.poetry]
name = "tiralabraharjoitus"
version = "0.1.0"
description = ""
authors = ["Kalle Lindholm <kalle.lindholm@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]
coverage = "^6.4.2"
pytest = "^7.1.2"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
